[#changelog]
== Changelog

[#0_15_3]
=== 0.15.3 (2021-02-26)

* Spec: Expose module hash and controller via `read_state`

[#0_15_2]
=== 0.15.2 (2021-02-09)

* The document is renamed to “Internet Computer Interface Spec”

[#0_15_0]
=== 0.15.0 (2020-12-17)

* Spec: Support for raw Ed25519 keys is removed

[#0_14_1]
=== 0.14.1 (2020-12-08)

* Spec: The default `memory_allocation` becomes unspecified

[#0_14_0]
=== 0.14.0 (2020-11-18)

* Support for funds is scaled back to only support cycles
* The `ic0.msg_cycles_accept` system call now returns the actually accepted
  cycles
* The `provisional_` management calls are introduced

[#0_13_2]
=== 0.13.2 (2020-11-12)

* Spec: The `ic0.canister_status` system call

[#0_13_1]
=== 0.13.1 (2020-11-06)

* Spec: Delegation between user public keys

[#0_13_0]
=== 0.13.0 (2020-10-19)

* Spec: Certification (also removes “request-status” request)

[#0_12_2]
=== 0.12.2 (2020-10-23)

* Spec: User authentication method based on WebAuthn is introduced
* Spec: User authentication can use ECDSA
* Spec: Public keys are DER-encoded

[#0_12_1]
=== 0.12.1 (2020-10-16)

* Spec: Return more information in the `canister_status` management call

[#0_12_0]
=== 0.12.0 (2020-10-13)

* Spec: Anonymous requests must have the sender field set

[#0_11_1]
=== 0.11.1 (2020-10-01)

* Spec: The `deposit_funds` call
* ic-ref(-test): Implement and test the above changes

[#0_11_0]
=== 0.11.0 (2020-09-23)

* Spec: Inter-canister calls are now performed using a builder-like API
* Spec: Support for funds (balances and transfers)

[#v0_10_3]
=== 0.10.3 (2020-09-21)

* Spec: The anonymous user is introduced

[#v0_10_2]
=== 0.10.2 (2020-09-08)

* ic-ref(-test): Bugfix: A query response should _not_ include a `time` field

[#v0_10_1]
=== 0.10.1 (2020-09-01)

* Forward-port changes from 0.9.3

[#v0_10_0]
=== 0.10.0 (2020-08-06)

* Spec: Users can set/update a memory allocation when installing/upgrading a canister.
* Spec: The `expiry` field is added to requests