@@ -1,6 +1,9 @@
 [#changelog]
 == Changelog
 
+* Spec: Clarify that the `ic0.data_certificate_present` system function may be
+  called in all contexts.
+
 [#0_15_3]
 === 0.15.3 (2021-02-26)
 
